UIUX-751: Fix layout issues on merge interface

--- a/sugarcrm/styleguide/less/sugar-specific/merge-interface.less
+++ b/sugarcrm/styleguide/less/sugar-specific/merge-interface.less
@@ -125,6 +125,17 @@ h4.merge-interface-header {
 		&.even {
 		    background:#FDF9EA;
 		}
+		.ellipsis_inline {
+			display: inline-block !important;
+			width: 90%;
+		}
+		.select2-container {
+			width: 100px !important;
+		}
+		textarea {
+			height: 17px;
+			width: 86px;
+		}
 	}
 
 
